compiler/tests/en/errors/unreachable_ret.salam
// EXPECT: E070
func f(x : int) : int:
    ret x + 1
    println("never")
end

func main:
    println(f(1))
end
